@@ -14,6 +14,7 @@
 
 # Microsoft Translator
 #microsoft.api.subscription_key=xxxxx
+#microsoft.neural=true
 
 # MyMemory email and API key
 #mymemory.api.email=xxxxx@xxxxx.xx
