@@ -2206,6 +2206,7 @@ DEEPL_API_KEY_NOTFOUND=DeepL Api key not available. See OmegaT manual for instru
 MT_ENGINE_MICROSOFT_SUBSCRIPTION_KEY_LABEL=Subscription Key:
 MT_ENGINE_MICROSOFT_WRONG_RESPONSE=Wrong response from engine
 MT_ENGINE_MICROSOFT_SUBSCRIPTION_KEY_NOTFOUND=Microsoft Translator Subscription Key not available. See OmegaT manual for instructions.
+MT_ENGINE_MICROSOFT_NEURAL_LABEL=Neural machine translation
 
 MT_ENGINE_YANDEX_KEY_NOTFOUND=Yandex Translate - No API Key Specified
 MT_ENGINE_YANDEX_INVALID_KEY=Invalid API key
