@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 4.1.4 update 1
 ----------------------------------------------------------------------
-  4 Enhancements
+  5 Enhancements
   1 Bug fix
   0 Localisation update
 ----------------------------------------------------------------------
@@ -14,6 +14,9 @@
 
   - Clarify XLIFF filter options description
   https://sourceforge.net/p/omegat/feature-requests/1387/
+
+  - Add support for Microsoft neural machine translation
+  https://sourceforge.net/p/omegat/feature-requests/1366/
 
   Other changes:
 
